trying to figure out the components

--- a/library-app/index.html
+++ b/library-app/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300..700&display=swap" rel="stylesheet">
     <title>Library Card</title>
   </head>
-  <body class="bg-gray-light">
+  <body class="bg-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
